--- a/Blog Project/Backend/.env
+++ b/Blog Project/Backend/.env
@@ -1,3 +1,3 @@
-EMAIL_USER=andar_mat_jao
-EMAIL_PASS=yaha_kuch_nahi_hai  
-JWT_SECRET=bhai_env_file_me_kya_dhundh_raha_hai
+EMAIL=priyapatil8277@gmail.com
+PASS=wbgitjsouoqeedmz
+JWT_SECRET=jwtsecretkey123
